test/scc/pp/errors/027.a
027.t:1:7: error: missing ')' in expression